# sk_32_unit_testing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  init.sql
gtest/: CMakeLists.txt
src/: CMakeLists.txt  ClassThatUsesDB.cpp  ClassThatUsesDB.h  DBConnection.cpp  DBConnection.h  foo.cpp  main.cpp
tests/: CMakeLists.txt  test_app.cpp
